--- a/package.json
+++ b/package.json
@@ -8,34 +8,36 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint '*/**/*.{ts,tsx}'",
+    "format": "yarn prettier --write .",
     "test": "DEBUG_PRINT_LIMIT=20000 jest --runInBand --detectOpenHandles --config jest.config.json",
     "deploy": "rm -rf dist && webpack --mode production",
     "develop": "webpack serve --mode development --open --hot",
     "view-coverage-report": "open coverage/lcov-report/index.html"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/react-hooks": "^5.1.2",
-    "@types/jest": "^26.0.22",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "css-loader": "^5.2.4",
-    "eslint": "^7.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.2.0",
     "eslint-plugin-react": "^7.23.2",
-    "html-loader": "^2.1.2",
+    "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "source-map-loader": "^2.0.1",
-    "style-loader": "^2.0.0",
-    "ts-jest": "^26.5.5",
-    "ts-loader": "^8.2.0",
+    "jest": "^27.3.1",
+    "prettier": "2.4.1",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.2.4",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
