--- a/package.json
+++ b/package.json
@@ -10,38 +10,22 @@
     "lint": "eslint '*/**/*.{ts,tsx}'",
     "format": "yarn prettier --write .",
     "test": "DEBUG_PRINT_LIMIT=20000 jest --runInBand --detectOpenHandles --config jest.config.json",
-    "deploy": "rm -rf dist && webpack --mode production",
-    "develop": "webpack serve --mode development --open --hot",
+    "deploy": "yarn run build-production && yarn run build-docker-image",
+    "develop": "yarn run build-development && yarn run launch-development",
+    "build-development": "rm -rf dist_dev && webpack --mode development --config webpack.server.config.js && webpack --mode development --config webpack.dev.config.js",
+    "launch-development": "NODE_ENV=development PORT=8080 node ./dist_dev/server.js",
+    "build-production": "rm -rf dist_prod && webpack --mode production --config webpack.server.config.js && webpack --mode production --config webpack.prod.config.js",
+    "launch-production": "node ./dist_prod/server.js",
+    "build-docker-image": "docker build -t defiantgoat/cartolicious-client .",
     "view-coverage-report": "open coverage/lcov-report/index.html"
-  },
-  "devDependencies": {
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@types/jest": "^27.0.2",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "css-loader": "^6.5.1",
-    "eslint": "^8.2.0",
-    "eslint-plugin-react": "^7.23.2",
-    "html-loader": "^3.0.1",
-    "html-webpack-plugin": "^5.3.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.3.1",
-    "prettier": "2.4.1",
-    "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^27.0.7",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.2.4",
-    "webpack": "^5.35.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
+    "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
+    "jwt-decode": "^3.1.2",
+    "oidc-client": "^1.10.1",
     "ol": "^6.5.0",
     "pbf": "^3.2.1",
     "react": "^17.0.2",
@@ -49,5 +33,51 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-react-jsx": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/crypto-js": "^4.0.2",
+    "@types/express": "^4.17.1",
+    "@types/jest": "^27.0.2",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/node": "^16.11.10",
+    "@types/ol": "^6.3.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.7",
+    "@types/uuid": "^8.0.0",
+    "@types/webpack-dev-middleware": "^5.0.2",
+    "@types/webpack-hot-middleware": "^2.25.3",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "babel-jest": "^27.3.1",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.2.0",
+    "eslint-plugin-react": "^7.23.2",
+    "file-loader": "^6.0.0",
+    "html-loader": "^3.0.1",
+    "html-webpack-plugin": "^5.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.1",
+    "jest-canvas-mock": "^2.2.0",
+    "prettier": "2.4.1",
+    "sass-loader": "^12.3.0",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.2.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-middleware": "^5.2.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
