--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "view-coverage-report": "open coverage/lcov-report/index.html"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "crypto-js": "^4.0.0",
