--- a/package.json
+++ b/package.json
@@ -20,66 +20,70 @@
     "view-coverage-report": "open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.0.1",
+    "@auth0/auth0-react": "^2.2.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "crypto-js": "^4.0.0",
-    "express": "^4.18.2",
-    "jwt-decode": "^3.1.2",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
+    "crypto-js": "^4.2.0",
+    "express": "^4.21.2",
+    "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "oidc-client": "^1.10.1",
-    "ol": "^7.2.2",
-    "pbf": "^3.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "ol": "^10.3.1",
+    "pbf": "^4.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@testing-library/react": "^14.0.0",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/react-hooks": "^8.0.1",
-    "@types/crypto-js": "^4.1.1",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.4.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jwt-decode": "^3.1.0",
-    "@types/node": "^18.14.2",
+    "@types/node": "^22.10.2",
     "@types/ol": "^7.0.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-redux": "^7.1.25",
-    "@types/uuid": "^9.0.1",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "@types/react-redux": "^7.1.34",
+    "@types/uuid": "^10.0.0",
     "@types/webpack-dev-middleware": "^5.3.0",
-    "@types/webpack-hot-middleware": "^2.25.6",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "babel-jest": "^29.4.3",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.35.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@types/webpack-hot-middleware": "^2.25.9",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "babel-jest": "^29.7.0",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
     "file-loader": "^6.0.0",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.3.1",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.4.3",
-    "jest-canvas-mock": "^2.4.0",
-    "prettier": "2.8.4",
-    "sass-loader": "^13.2.0",
-    "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.1",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
+    "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
+    "prettier": "3.4.2",
+    "sass-loader": "^16.0.4",
+    "source-map-loader": "^5.0.0",
+    "style-loader": "^4.0.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-middleware": "^6.0.1",
-    "webpack-hot-middleware": "^2.25.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.4.2",
+    "webpack-hot-middleware": "^2.26.1",
     "webpack-node-externals": "^3.0.0"
   }
 }
