--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "sourceMap": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
@@ -10,14 +10,11 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
-    "removeComments": true,
-    "typeRoots": [
-      "src/types",
-      "./node_modules/@types"
-    ]
+    "removeComments": true
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.tsx",
     "src/server/server-prod.ts"
   ],
   "exclude": [
