--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-ui/icons": "^4.11.3",
     "crypto-js": "^4.0.0",
     "express": "^4.18.2",
+    "firebase": "^11.1.0",
     "jwt-decode": "^3.1.2",
     "normalize.css": "^8.0.1",
     "oidc-client": "^1.10.1",
