--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
   "include": [
     "src/**/*.ts",
     "src/server/server-prod.ts"
-  ],
+, "src/client/components/Firebase/provider.tsx"  ],
   "exclude": [
       "node_modules",
       "**/*.spec.ts",
