--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "view-coverage-report": "open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@licious/react": "^0.0.15",
+    "@licious/react": "^0.0.16",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "crypto-js": "^4.0.0",
     "express": "^4.18.2",
     "firebase": "^11.1.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^3.1.2",
     "normalize.css": "^8.0.1",
     "oidc-client": "^1.10.1",
