--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   },
   "dependencies": {
     "@licious/react": "^0.0.17",
+    "@reduxjs/toolkit": "^2.5.0",
     "express": "^4.18.2",
     "firebase": "^11.1.0",
     "html2canvas": "^1.4.1",
     "ol": "^7.2.2",
     "pbf": "^3.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
@@ -43,8 +43,8 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.2",
     "@types/ol": "^7.0.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.1",
     "@types/webpack-dev-middleware": "^5.3.0",
