--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "view-coverage-report": "open coverage/lcov-report/index.html"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "@licious/react": "^0.0.17",
     "@reduxjs/toolkit": "^2.5.0",
     "express": "^4.18.2",
